slightly better linked list
git-svn-id: https://svn.apache.org/repos/asf/jakarta/bcel/trunk@152837 13f79535-47bb-0310-9956-ffa450edef68